# flow

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  ROADMAP.md
scripts/: check-commit-msg.sh
src/: cli.rs  context.rs  git.rs  lib.rs  main.rs  storage.rs
src/commands/: done.rs  history.rs  mod.rs  note.rs  resume.rs  status.rs
