[package]
name = "flow"
version = "0.1.0"
edition = "2021"
authors = ["onoht"]
description = "A CLI tool for developer context preservation"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
